--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,44 +1,13 @@
-version: 2.0
-jobs:
-  build:
-    working_directory: ~/vault-circleci-auth-plugin
-    docker:
-      - image: marcboudreau/golang-docker-git-circleci:latest
-    steps:
-      - checkout
-      - setup_remote_docker
-      - run:
-          name: Build All Platforms
-          command: |
-            work_dir=/usr/local/go/src/github.com/marcboudreau/vault-circleci-auth-plugin
-            container_id=$(docker create \
-                -w $work_dir \
-                golang:latest make)
-            docker cp . $container_id:$work_dir
-            docker start -a $container_id
-            docker cp $container_id:$work_dir/bin ./
-            docker rm -f $container_id
-      - run:
-          name: Building Docker Image
-          command: |
-            docker build -t vault-circleci-auth-plugin:test .
-      - run:
-          name: Running Tests
-          command: ./integration-test/tests.sh
-      - run:
-          name: Release
-          command: |
-            if [[ $CIRCLE_BRANCH == "master" ]]; then
-              RELEASE=$(curl -s \
-                          https://api.github.com/repos/$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME/commits/$CIRCLE_SHA1 \
-                          | jq .commit.message \
-                          | sed -n 's/.*\[release \(.*\)\].*/\1/p')
-              export RELEASE=${RELEASE:-patch}
-              make release
-
-              docker tag vault-circleci-auth-plugin:test marcboudreau/vault-circleci-auth-plugin:$(git semver get)
-              docker tag vault-circleci-auth-plugin:test marcboudreau/vault-circleci-auth-plugin:latest
-
-              echo $DOCKER_PASSWORD | docker login -u $DOCKER_USER --password-stdin
-              docker push marcboudreau/vault-circleci-auth-plugin
-            fi
+# Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
+version: 2.1
+# Use a package of configuration called an orb.
+orbs:
+  # Declare a dependency on the welcome-orb
+  welcome: circleci/welcome-orb@0.4.1
+# Orchestrate or schedule a set of jobs
+workflows:
+  # Name the workflow "welcome"
+  welcome:
+    # Run the welcome/run job in its own container
+    jobs:
+      - welcome/run
